--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             },
             fontFamily: {
               sans: ['Outfit', 'sans-serif'],
+            },
+            transitionTimingFunction: {
+              'spring': 'cubic-bezier(0.34, 1.56, 0.64, 1)',
             }
           }
         }
@@ -34,16 +37,16 @@
           @apply bg-white/60 dark:bg-black/20 backdrop-blur-md border border-white/40 dark:border-white/10 shadow-sm transition-colors duration-300;
         }
         .text-primary {
-          @apply text-slate-800 dark:text-white transition-colors duration-300;
+          @apply text-slate-800 dark:text-slate-100 transition-colors duration-300;
         }
         .text-secondary {
-          @apply text-slate-600 dark:text-white/60 transition-colors duration-300;
+          @apply text-slate-500 dark:text-slate-400 transition-colors duration-300;
         }
         .icon-primary {
-          @apply text-slate-700 dark:text-white/90 transition-colors duration-300;
+          @apply text-slate-700 dark:text-slate-200 transition-colors duration-300;
         }
         .nav-glass {
-          @apply bg-white/80 dark:bg-black/40 backdrop-blur-xl border-t border-white/20 dark:border-white/5 shadow-lg;
+          @apply bg-white/80 dark:bg-[#0a0a0a]/80 backdrop-blur-xl border-t border-white/20 dark:border-white/5 shadow-[0_-8px_30px_rgba(0,0,0,0.05)];
         }
       }
       
@@ -96,7 +99,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-950 text-white overflow-hidden selection:bg-blue-500/30">
+  <body class="bg-slate-950 text-white overflow-hidden selection:bg-blue-500/30 antialiased">
     <div id="root"></div>
   </body>
 </html>
