feat(weather): Add sun rays effect and improve icons
Introduces a new sun ray visual effect for sunny weather conditions. This enhances the dynamic backgrounds by adding animated light rays that react to the time of day.

Additionally, this commit refines weather icons by:
- Adding subtle drop shadows for better visibility against various backgrounds.
- Adjusting colors for improved contrast, especially in dark mode.
- Applying a gentle rotation animation to the sun icon for a more lively feel.

The navigation bar has also been updated with new icons and labels for a more intuitive user experience.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,22 @@
         96% { opacity: 0.8; }
         100% { opacity: 0; }
       }
+
+      @keyframes spin-slow {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
+      }
+      @keyframes spin-reverse-slow {
+        from { transform: rotate(360deg); }
+        to { transform: rotate(0deg); }
+      }
+      
+      .animate-spin-slow {
+        animation: spin-slow 60s linear infinite;
+      }
+      .animate-spin-reverse-slow {
+        animation: spin-reverse-slow 50s linear infinite;
+      }
     </style>
   <script type="importmap">
 {
